test/types/file/freadIntFailed.good
freadIntFailed.chpl:5: error: read failed: eof
